@@ -193,15 +193,19 @@ BEGIN
     DEFPUSHBUTTON   "&Close", IDC_ABOUT_CLOSE, 165, 195, 50, 20
 END
 
-// Log Viewer Dialog
-IDD_LOG_VIEWER DIALOGEX 0, 0, 600, 400
+// Log Viewer Dialog - Reasonable default size (450×300)
+// Mathematics: Comfortable viewing without obscuring screen
+// - Width: 450px = enough for ~80 chars at 9pt Consolas
+// - Height: 300px = enough for ~15-20 lines of log text
+// - Resizable for users who want more space
+IDD_LOG_VIEWER DIALOGEX 0, 0, 450, 300
 STYLE DS_SHELLFONT | DS_MODALFRAME | DS_CENTER | WS_POPUP | WS_CAPTION | WS_SYSMENU | WS_THICKFRAME
 CAPTION "yt-dlp Session Log"
 FONT 9, "Segoe UI"
 BEGIN
-    CONTROL         "", IDC_LOG_TAB_CONTROL, "SysTabControl32", TCS_TABS | WS_TABSTOP, 7, 7, 586, 360, WS_EX_CONTROLPARENT
-    EDITTEXT        IDC_LOG_ALL_TEXT, 12, 27, 576, 335, ES_MULTILINE | ES_READONLY | ES_AUTOVSCROLL | ES_AUTOHSCROLL | WS_VSCROLL | WS_HSCROLL | WS_BORDER
-    EDITTEXT        IDC_LOG_LAST_TEXT, 12, 27, 576, 335, ES_MULTILINE | ES_READONLY | ES_AUTOVSCROLL | ES_AUTOHSCROLL | WS_VSCROLL | WS_HSCROLL | WS_BORDER | NOT WS_VISIBLE
-    PUSHBUTTON      "&Copy", IDC_LOG_COPY_BTN, 488, 375, 50, 18
-    DEFPUSHBUTTON   "&OK", IDC_LOG_OK_BTN, 543, 375, 50, 18
+    CONTROL         "", IDC_LOG_TAB_CONTROL, "SysTabControl32", TCS_TABS | WS_TABSTOP, 7, 7, 436, 260, WS_EX_CONTROLPARENT
+    EDITTEXT        IDC_LOG_ALL_TEXT, 12, 27, 426, 235, ES_MULTILINE | ES_READONLY | ES_AUTOVSCROLL | ES_AUTOHSCROLL | WS_VSCROLL | WS_HSCROLL | WS_BORDER
+    EDITTEXT        IDC_LOG_LAST_TEXT, 12, 27, 426, 235, ES_MULTILINE | ES_READONLY | ES_AUTOVSCROLL | ES_AUTOHSCROLL | WS_VSCROLL | WS_HSCROLL | WS_BORDER | NOT WS_VISIBLE
+    PUSHBUTTON      "&Copy", IDC_LOG_COPY_BTN, 338, 275, 50, 18
+    DEFPUSHBUTTON   "&OK", IDC_LOG_OK_BTN, 393, 275, 50, 18
 END
